# app-deploy

./: .dockerignore  .env.manual_audit  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  PASSWORD_FIX.md  QUICKSTART.md  README.md  RESTART-BACKEND.bat  RESTART_NOW.md  RUN_ME.txt  docker-compose.yml  package-lock.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  run.py  smoke_test.py  sql_app.db  start-backend.bat  start-manual-audit-backend.bat  test_manager_portal_api.py  test_manual_audit_api.py
docs/: TESTING.md
docs/architecture/adr/: 001-hexagonal-architecture.md
docs/architecture/diagrams/: ARCHITECTURE_DIAGRAMS.md
docs/deployment/: DEPLOYMENT.md
docs/iam-policies/: rekognition-policy.json
scripts/: init_db.py  reko_demo.py  setup_aws_resources.py  test_api_live.py  test_fallback.py  test_gemini.py  verify_aws.py
src/: main.py
src/api/: __init__.py  dependencies.py
src/api/middleware/: __init__.py  correlation_id.py
src/api/routers/: manager_portal_router.py  manual_audit_router.py
src/api/routes/: __init__.py  auth.py  health.py  hygiene.py
src/api/schemas/: manager_portal_schemas.py  manual_audit_schemas.py
src/application/: __init__.py
src/application/dto/: auth_requests.py  auth_responses.py
src/application/use_cases/: __init__.py  analyze_cleanliness.py  auth.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  audit_result.py  user.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/ports/: __init__.py  audit_repository.py  storage_provider.py  user_repository.py  vision_provider.py
src/domain/services/: __init__.py  cleanliness_evaluator.py
src/domain/value_objects/: __init__.py  cleanliness_status.py  confidence_score.py  image_metadata.py
src/infrastructure/: __init__.py
src/infrastructure/database/: manual_audit_db.py  manual_audit_models.py  manual_audit_repository.py
src/infrastructure/persistence/: database.py  dynamodb_repository.py  in_memory_repository.py  models.py  rds_user_repository.py
src/infrastructure/security/: hashing.py  jwt_token.py
src/infrastructure/storage/: __init__.py  s3_adapter.py
src/infrastructure/vision/: __init__.py  fallback_vision_provider.py  gemini_adapter.py  rekognition_adapter.py  tflite_adapter.py
tests/: conftest.py  test_password_hashing.py
tests/e2e/: __init__.py  test_hygiene_api.py
tests/integration/: test_rekognition_adapter.py
tests/unit/domain/: __init__.py  test_cleanliness_evaluator.py
